--- a/moodpickerstyle.css
+++ b/moodpickerstyle.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'lightfont';
-  src: url('font/AntipastoPro_trial.ttf') format('ttf');
+  src: url('font/AntipastoPro-Extralight_trial.ttf') format('ttf');
   font-weight: normal;
   font-style: normal;
 }
@@ -67,10 +67,10 @@ background-color: black;
 
 border-radius: 5px;
 }
-
+/* how do you like your music? */
 #textbox{
 letter-spacing: 1px;
-font-family: 'lightfont',sans-serif;
+font-family: 'lightfont', sans-serif;
 display: inline;
 position: relative;
 z-index: inherit;
@@ -78,7 +78,7 @@ color : white;
 font-weight: 200;
 text-shadow: 0px 2px 0px #948979;
 }
-
+/*Vibe 를 설명해주는 textbox*/
 #maintext{
 position: absolute;
 top: 50%;
@@ -113,11 +113,41 @@ transition: opacity 0.5s ease;
 #menubar{
 top:0px;
 left:0px;
-position: fixed;
+position: absolute;
 z-index: 2;
 width: 100vw;
 height: 50px;
 background-color: black;
+opacity: 80%;
 box-shadow: 0px 1px 10px white;
 color: white;
+}
+
+#menu a{
+  display : block;
+  position : relative;
+  display: inline;
+  text-decoration: none;
+  top : 12px;
+  margin-left : 150px;
+  font-weight: 200;
+  padding-left: 10px;
+  padding-right: 10px;
+  color : white;
+ text-shadow: 1px 1px 0px gray;
+}
+
+#bottomarea{
+  color : gray;
+  text-align: center;
+  font-weight: 100;
+  font-size: 20px;
+  position: absolute;
+  z-index: 2;
+  left:0px;
+  width: 100vw;
+  top:90%;
+  height: 78.5px;
+  background-color: black;
+  opacity: 75%;
 }
