--- a/templates/aftermood.html
+++ b/templates/aftermood.html
@@ -13,7 +13,7 @@
 <!-- 메뉴 바 부분입니다. -->
     <div id="menubar">
         <div id="menu">
-            <a><img src="" alt="asdf"></a>
+             <a><img src="/static/logo.png" style="height: 20px; width: auto;" alt="asdf"></a>
             <a href="/">home</a>
             <a href="/color">color</a>
             <a href="/search">search</a>
