--- a/templates/search.html
+++ b/templates/search.html
@@ -15,7 +15,7 @@
 <body>
     <div id="menubar">
         <div id="menu">
-            <a><img src="" alt="asdf"></a>
+             <a><img src="/static/logo.png" style="height: 20px; width: auto;" alt="asdf"></a>
             <a href="/home">home</a>
             <a href="/color">color</a>
             <a href="/search">search</a>
