--- a/templates/template.html
+++ b/templates/template.html
@@ -14,7 +14,7 @@
 <!-- 메뉴 바 부분입니다. -->
     <div id="menubar">
         <div id="menu">
-            <a><img src="" alt="asdf"></a>
+             <a><img src="/static/logo.png" style="height: 20px; width: auto; position: fixed;" alt="asdf"></a>
             <a href="/">home</a>
             <a href="/color">color</a>
             <a href="/search">search</a>
@@ -55,16 +55,12 @@
 ">
   <ul style="list-style-type: disc;">
     <li style="margin-bottom: 30px;">
-      <strong>Genre:</strong>
-      Displays a graph showing the distribution of genres in the user's recently played music, making it easy to understand the user's current music preferences.
-    </li>
-    <li style="margin-bottom: 30px;">
       <strong>Mood-based Song Recommendations:</strong>
       Suggests music that matches the mood selected by the user, allowing for quick and easy discovery of music that fits a desired mood.
     </li>
     <li style="margin-bottom: 30px;">
       <strong>Search:</strong>
-      Shows a 
+      Displays a requested track, mainly showing property of Tracks, such as popularity.
     </li>
     <li style="margin-bottom: 10px;">
       <strong>Colors:</strong>
