minor bug fixes

--- a/templates/template.html
+++ b/templates/template.html
@@ -15,10 +15,10 @@
     <div id="menubar">
         <div id="menu">
              <a><img src="/static/logo.png" style="height: 20px; width: auto; position: fixed;" alt="asdf"></a>
-            <a href="/">home</a>
+            <a href="">home</a>
             <a href="/color">color</a>
-            <a href="/search">search</a>
-            <a href="/mood">mood</a>
+            <a href="">search</a>
+            <a href="">mood</a>
             <a href="/login">login</a>  
         </div>
     </div>
