--- a/templates/template.html
+++ b/templates/template.html
@@ -16,9 +16,9 @@
         <div id="menu">
              <a><img src="/static/logo.png" style="height: 20px; width: auto; position: fixed;" alt="asdf"></a>
             <a href="">home</a>
-            <a href="/color">color</a>
-            <a href="">search</a>
-            <a href="">mood</a>
+            <a href="" id="color">color</a>
+            <a href="" id="genre">search</a>
+            <a href="" id="mood">mood</a>
             <a href="/login">login</a>  
         </div>
     </div>
